feat: implementa interface de carrinho reativa de acordo com uso do qrcode ou não
